Added registering users

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
 
 	<properties>
 		<java.version>11</java.version>
-<!--		<telegram.version>6.9.7.1</telegram.version>-->
 		<telegram.version>5.6.0</telegram.version>
 	</properties>
 
@@ -44,16 +43,16 @@
 			<optional>true</optional>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.postgresql</groupId>-->
-<!--			<artifactId>postgresql</artifactId>-->
-<!--			<version>42.7.3</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.vdurmont</groupId>
