--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<telegram.version>5.6.0</telegram.version>
+<!--		<telegram.version>5.6.0</telegram.version>-->
+		<telegram.version>6.7.0</telegram.version>
 	</properties>
 
 	<dependencies>
