добавил бота в базу и сотрудников прикрутил

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,15 @@
 
 #bot.name=UkrCarServiceSupportBot
 #bot.token=
+#bot.id=6854063767
 #bot.owner=
+
+#spring.datasource.url=
+#spring.datasource.username=
+#spring.datasource.password=
+
+#employees.support=1
+#employees.call-center=1
+
+#cron.read-and-send=0 */1 * * * *
+
