--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,36 +1,36 @@
-status = warn
-
-# Log files location
-#property.basePath = D:/opt/t2s/
-property.basePath = /opt/
-
-rootLogger.level = info
-rootLogger.appenderRef.stdout.ref = consoleLogger
-
-logger.app.name = com.ukrcarservice.UcsSupportBot
-logger.app.level = info
-logger.app.additivity = false
-#logger.app.appenderRef.rolling.ref = fileLogger
-logger.app.appenderRef.console.ref = consoleLogger
-
-# Console appender
-appender.console.type = Console
-appender.console.name = consoleLogger
-appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %p %F ::: %m%n
-#appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %p %F   %m%n
-
-# RollingFile appender
-appender.rolling.type = RollingFile
-appender.rolling.name = fileLogger
-appender.rolling.fileName = ${basePath}/logs/telegram_bot_support_ucs/telegram_bot_support_ucs.log
-appender.rolling.filePattern = ${basePath}/logs/telegram_bot_support_ucs/$${date:yyyy-MM}/telegram_bot_support_ucs-%d{yyyy-MM-dd}.%i.log.gz
-appender.rolling.layout.type = PatternLayout
-#appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %p %F   %m%n
-appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %p %F ::: %m%n
-appender.rolling.policies.type = Policies
-appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
-appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
-appender.rolling.policies.size.size = 100MB
-appender.rolling.strategy.type = DefaultRolloverStrategy
-appender.rolling.strategy.max = 300
+#status = warn
+#
+## Log files location
+##property.basePath = D:/opt/t2s/
+#property.basePath = /opt/
+#
+#rootLogger.level = info
+#rootLogger.appenderRef.stdout.ref = consoleLogger
+#
+#logger.app.name = com.ukrcarservice.UcsSupportBot
+#logger.app.level = info
+#logger.app.additivity = false
+##logger.app.appenderRef.rolling.ref = fileLogger
+#logger.app.appenderRef.console.ref = consoleLogger
+#
+## Console appender
+#appender.console.type = Console
+#appender.console.name = consoleLogger
+#appender.console.layout.type = PatternLayout
+#appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %p %F ::: %m%n
+##appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %p %F   %m%n
+#
+## RollingFile appender
+#appender.rolling.type = RollingFile
+#appender.rolling.name = fileLogger
+#appender.rolling.fileName = ${basePath}/logs/telegram_bot_support_ucs/telegram_bot_support_ucs.log
+#appender.rolling.filePattern = ${basePath}/logs/telegram_bot_support_ucs/$${date:yyyy-MM}/telegram_bot_support_ucs-%d{yyyy-MM-dd}.%i.log.gz
+#appender.rolling.layout.type = PatternLayout
+##appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %p %F   %m%n
+#appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %p %F ::: %m%n
+#appender.rolling.policies.type = Policies
+#appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
+#appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
+#appender.rolling.policies.size.size = 100MB
+#appender.rolling.strategy.type = DefaultRolloverStrategy
+#appender.rolling.strategy.max = 300
