--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -10,8 +10,8 @@ rootLogger.appenderRef.stdout.ref = consoleLogger
 logger.app.name = com.ukrcarservice.UcsSupportBot
 logger.app.level = info
 logger.app.additivity = false
-#logger.app.appenderRef.rolling.ref = fileLogger
-logger.app.appenderRef.console.ref = consoleLogger
+logger.app.appenderRef.rolling.ref = fileLogger
+#logger.app.appenderRef.console.ref = consoleLogger
 
 # Console appender
 appender.console.type = Console
