--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -7,7 +7,7 @@ property.basePath = /opt/
 rootLogger.level = info
 rootLogger.appenderRef.stdout.ref = consoleLogger
 
-logger.app.name = com.ukrcarservice.UcsSupportBot
+logger.app.name = com.ukrcarservice.ucs_support_telegrabm_bot
 logger.app.level = info
 logger.app.additivity = false
 logger.app.appenderRef.rolling.ref = fileLogger
