--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -23,8 +23,8 @@ appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %p %F ::: %m%n
 # RollingFile appender
 appender.rolling.type = RollingFile
 appender.rolling.name = fileLogger
-appender.rolling.fileName = ${basePath}/logs/telegram_bot_support_ucs/telegram_bot_support_ucs.log
-appender.rolling.filePattern = ${basePath}/logs/telegram_bot_support_ucs/$${date:yyyy-MM}/telegram_bot_support_ucs-%d{yyyy-MM-dd}.%i.log.gz
+appender.rolling.fileName = ${basePath}/logs/telegram_bot_ucs/telegram_bot_ucs.log
+appender.rolling.filePattern = ${basePath}/logs/telegram_bot_ucs/$${date:yyyy-MM}/telegram_bot_ucs-%d{yyyy-MM-dd}.%i.log.gz
 appender.rolling.layout.type = PatternLayout
 #appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %p %F   %m%n
 appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %p %F ::: %m%n
