--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -2,7 +2,7 @@ status = warn
 
 # Log files location
 #property.basePath = D:/opt/t2s/
-property.basePath = /opt/
+property.basePath = /opt
 
 rootLogger.level = info
 rootLogger.appenderRef.stdout.ref = consoleLogger
