--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 <!--		<java.version>11</java.version>-->
-		<java.version>17</java.version>
+<!--		<java.version>17</java.version>-->
 <!--		<telegram.version>5.6.0</telegram.version>-->
 		<telegram.version>6.7.0</telegram.version>
 		<log4j2.version>2.17.1</log4j2.version>
