--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<description>UCS support telegram bot</description>
 
 	<properties>
-<!--		<java.version>11</java.version>-->
+		<java.version>11</java.version>
 <!--		<java.version>17</java.version>-->
 <!--		<telegram.version>5.6.0</telegram.version>-->
 		<telegram.version>6.7.0</telegram.version>
